# hello-grpc

./: CMakeLists.txt
protos/: hello.proto
src/: client.cpp  server.cpp
